# ROS2-Lidar-Simulation

./: .gitignore  README.md  mesh_creation.py
install/: local_setup.sh  setup.sh
install/my_simulation/lib/my_simulation/: pointcloud_subscriber  robot_control
install/my_simulation/share/my_simulation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_simulation/share/my_simulation/cmake/: my_simulationConfig-version.cmake  my_simulationConfig.cmake
install/my_simulation/share/my_simulation/environment/: ament_prefix_path.dsv  path.dsv
install/my_simulation/share/my_simulation/launch/: maquette_launch.py  maquette_robot_launch.py  maquette_robot_rtabmap_launch.py  my_world.py  rtabmap_livox.py
log/: latest_build
src/my_simulation/: CMakeLists.txt  Readme.txt
src/my_simulation/config/: gz_bridge.yaml  mapper_params_online_async.yaml
src/my_simulation/launch/: maquette_robot_launch.py  my_world.py
src/my_simulation/models/maquette/: model.config
src/my_simulation/models/maquette_vf/: maquette_vf.sdf  model.config
src/my_simulation/models/pcl_data/: pcl_data.sdf
src/my_simulation/models/pcl_data/meshes/: pcl_out_time.dae
src/my_simulation/rviz/: rviz_config.rviz
src/my_simulation/src/: pointcloud_subscriber.cpp  robot_control.cpp
src/my_simulation/urdf/: imu.xacro  lidar.xacro  robot_core.xacro
src/my_simulation/urdf/only_lidar/: base_core.xacro  only_lidar.urdf.xacro
src/my_simulation/world/: maquette_vf_world.sdf  maquette_vf_world.world  maquette_world.sdf  pcl_world.sdf
(+22 files in other folders)
